
Project Meubles {
  database_type: "MySQL"
  Note: 'Schéma minimal conforme à l’énoncé.'
}

Table companies {
  id int [pk, increment]
  name varchar(100) [not null, unique]
}

Table materials {
  id int [pk, increment]
  name varchar(100) [not null]
  type enum('Bois','Fer','Plastique') [not null]
  company_id int [not null, ref: > companies.id]
}

Table categories {
  id int [pk, increment]
  name varchar(100) [not null, unique]
}

Table furniture_models {
  id int [pk, increment]
  name varchar(100) [not null]
  description text
  category_id int [not null, ref: > categories.id]
}

Table builds {
  id int [pk, increment]
  furniture_model_id int [not null, ref: > furniture_models.id]
  ref varchar(100)
  date_creation date
  destination varchar(255)
  notes text
}

Table build_materials {
  build_id int [not null, ref: > builds.id]
  material_id int [not null, ref: > materials.id]
  quantity decimal(10,2)
  unit varchar(20)
  cost_unit decimal(10,2)
  indexes {
    (build_id, material_id) [pk]
  }
}

Table tags {
  id int [pk, increment]
  label varchar(100) [not null, unique]
}

Table furniture_tags {
  furniture_model_id int [not null, ref: > furniture_models.id]
  tag_id int [not null, ref: > tags.id]
  indexes {
    (furniture_model_id, tag_id) [pk]
  }
}
